Added changes to qc.smk

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,5 @@
-# This config file is made according to Nextseq run and to be standardized based on other sequencers
+samples: "config/test_samples.tsv"
+reads: "config/test_reads.tsv"
 
- indir: testdata # 
- outdir:  testout # 
- genome: repositories
- mcid: 'HHHCKDSX2' # Required to automatically fetch the sample location created from Nextseq run
- samplescount: 1  # No of samples
+fastqc:
+  threads: 8
