--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -41,20 +41,23 @@ rule all:
 """
 
 include: "rules/qc.smk"
-
-# include: "rules/align.smk"
-# include: "rules/prnrd.smk"
-# include: "rules/revertsam.smk"
-# include: "rules/samtofq.smk"
-# include: "rules/mitoaln.smk"
-# include: "rules/mitoaln_shft.smk"
-# include: "rules/mergmt_ref.smk"
-# include: "rules/mergmt_shft.smk"
-# include: "rules/rdup_ref.smk"
-# include: "rules/rdup_shf.smk"
+include: "rules/align.smk"
+include: "rules/index.smk"
+include: "rules/prnrd.smk"
+include: "rules/revertsam.smk"
+include: "rules/index_rev.smk"
+include: "rules/samtofq.smk"
+include: "rules/mitoaln.smk"
+include: "rules/mitoaln_shft.smk"
+include: "rules/mergmt_ref.smk"
+include: "rules/mergmt_shft.smk"
+include: "rules/rdup_ref.smk"
+include: "rules/rdup_shf.smk"
+include: "rules/collect_metrics_ref.smk"
+include: "rules/collect_metrics_shft.smk"
 # include: "rules/haplo.smk"
-# include: "rules/mutek_ref.smk"
-# include: "rules/mutek_shf.smk"
+include: "rules/mutek_ref.smk"
+include: "rules/mutek_shf.smk"
 # include: "rules/lift.smk"
 # include: "rules/mergevcf.smk"
 # include: "rules/filter.smk"
