Updated rules for mapping, variant calling

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,10 @@
+### Sample maps ###
 reads: "config/test_reads.tsv"
 samples: "config/test_samples.tsv"
 
 ### GRCm39 ### 
 ref: "resources/mm39/GCF_000001635_27_GRCm39_genomic.fna"
+dict: "resources/mm39/GCF_000001635_27_GRCm39_genomic.dict"
 mt_chrom_name: "NC_005089.1"
 mt_ref: "resources/mm39/chrMT.fna"
 mt_shft_ref: "resources/mm39/chrMT_shifted_8000bp.fna"
@@ -10,6 +12,7 @@ mt_back_chain: "resources/mm39/chrMT_shifted_8000bp.back_chain"
 mt_shft_control_region: "resources/mm39/control_region_chrMT_shifted_8000bp.txt"
 mt_non_control_region: "resources/mm39/non_control_region_chrMT.txt"
 
+### 
 bwa: 
   threads: 40
 
@@ -18,10 +21,12 @@ fastqc:
   threads: 8
 
 gatk:
+  container: "docker//:broadinstitute/gatk" 
+  mem_mb: 1024
   threads: 32
-  sif: "singularity/gatk.sif" 
 
 picard:
+  container: "docker//:broadinstitute/picard"
   mem_mb: 1024 
   threads: 32
 
