--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,8 +9,8 @@ mt_chrom_name: "NC_005089.1"
 mt_ref: "resources/mm39/chrMT.fna"
 mt_shft_ref: "resources/mm39/chrMT_shifted_8000bp.fna"
 mt_back_chain: "resources/mm39/chrMT_shifted_8000bp.back_chain"
-mt_shft_control_region: "resources/mm39/control_region_chrMT_shifted_8000bp.txt"
-mt_non_control_region: "resources/mm39/non_control_region_chrMT.txt"
+mt_shft_control_region: "resources/mm39/control_region_chrMT_shifted_8000bp.bed"
+mt_non_control_region: "resources/mm39/non_control_region_chrMT.bed"
 
 ### 
 bwa: 
