--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,8 @@
 ### Sample maps ###
-reads: "config/test_reads.tsv"
-samples: "config/test_samples.tsv"
+reads: "config/reads.tsv"
+samples: "config/samples.tsv"
 
-### GRCm39 ### 
+### Mouse - mm39 (GRCm39) ### 
 ref: "resources/mm39/GCF_000001635_27_GRCm39_genomic.fna"
 dict: "resources/mm39/GCF_000001635_27_GRCm39_genomic.dict"
 mt_chrom_name: "NC_005089.1"
@@ -12,7 +12,17 @@ mt_back_chain: "resources/mm39/chrMT_shifted_8000bp.back_chain"
 mt_shft_control_region: "resources/mm39/control_region_chrMT_shifted_8000bp.bed"
 mt_non_control_region: "resources/mm39/non_control_region_chrMT.bed"
 
-### 
+### Human - hg38 (GRCh38) ###
+#ref:
+#dict:
+#mt_chrom_name:
+#mt_ref:
+#mt_shft_ref:
+#mt_back_chain:
+#mt_shft_control_region:
+#mt_non_control_region:
+
+### Tools ###
 bwa: 
   threads: 40
 
@@ -22,7 +32,7 @@ fastqc:
 
 gatk:
   container: "singularity/gatk.sif" 
-  mem_mb: 1024
+  mem_mb: 4096
   threads: 32
 
 picard:
@@ -32,4 +42,12 @@ picard:
 
 samtools: 
   threads: 8
+
+snpeff:
+  db: "resources/snpeff/mm39" 
+  ref: "mm39"
+  java_opts: "-XX:ParallelGCThreads=10"
+  mem_mb_anno: 4096 
+  mem_mb_download: 1024
+  threads: 4
 
