--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -33,4 +33,4 @@ include: "rules/lift.smk"
 include: "rules/mergevcf.smk"
 include: "rules/filter.smk"
 include: "rules/variant_filtration.smk"
-#include: "rules/annot.smk"
+include: "rules/annot.smk"
