Pipeline validation with simulated data

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,11 +1,10 @@
 ### Sample maps ###
 reads: "config/reads.tsv"
 samples: "config/samples.tsv"
-species: "mouse" # Set as "mouse" or "human"
+species: "mouse" # Set to "mouse" or "human"
 
 ### Mouse - mm39 (GRCm39) ### 
 ref: "resources/mm39/GCF_000001635_27_GRCm39_genomic.fna"
-#ref: "resources/mm39/chrMT.fna"
 dict: "resources/mm39/GCF_000001635_27_GRCm39_genomic.dict"
 mt_chrom_name: "NC_005089.1"
 mt_ref: "resources/mm39/chrMT.fna"
@@ -15,14 +14,19 @@ mt_shft_control_region: "resources/mm39/control_region_chrMT_shifted_8000bp.bed"
 mt_non_control_region: "resources/mm39/non_control_region_chrMT.bed"
 
 ### Human - hg38 (GRCh38) ###
-#ref:
+#ref: 
 #dict:
-#mt_chrom_name:
-#mt_ref:
-#mt_shft_ref:
-#mt_back_chain:
-#mt_shft_control_region:
-#mt_non_control_region:
+#mt_chrom_name: "resources/hg38/"
+#mt_ref: "resources/hg38/hg38.chrM.fa"
+#mt_shft_ref: "resources/hg38/hg38.chrM.shifted8000.fa"
+#mt_back_chain: "resources/hg38/ShiftBack.chain"
+#mt_shft_control_region: "resources/hg38/hg38_v0_chrM_control_region_shifted.chrM.interval_list"
+#mt_non_control_region: "resources/hg38/non_control_region.chrM.interval_list"
+
+### Params Variant Calling ###
+filter:
+  minAF: 0.01
+  min_reads_per_strand: 2
 
 ### Tools ###
 bwa: 
@@ -36,6 +40,7 @@ gatk:
   container: "singularity/gatk.sif" 
   mem_mb: 4096
   threads: 32
+
 
 picard:
   container: "singularity/picard.sif"
